Media Engagement: Fix for incorrect URL

The Media Engagement contents observer was incorrectly using the wrong
URL for top frame navigations. This fixes it so it uses the URL from the
NavigationHandle in a main frame navigation. Sub frame navigations
should continue to use the last committed URL of the web contents.

BUG=824653

Change-Id: I9c77b4e36c9c37471808d6c0817eb70c7fea8de1
Reviewed-on: https://chromium-review.googlesource.com/982409
Commit-Queue: Mounir Lamouri <mlamouri@chromium.org>
Reviewed-by: Mounir Lamouri <mlamouri@chromium.org>
Cr-Commit-Position: refs/heads/master@{#546438}
Former-commit-id: fb3959a7049912b0963ae4c8d4f3598f123a6316